banner section images

--- a/src/Component/Sections/Banner_Section/Banner_Section.css
+++ b/src/Component/Sections/Banner_Section/Banner_Section.css
@@ -1,26 +1,26 @@
 .slider {
-    background: url('https://rb.gy/ogp9x') no-repeat center top;
+    background: url('https://rb.gy/w9a1i') no-repeat center top;
     background-size: cover;
     position: relative;
     z-index: 1;
 }
 
 .slider2 {
-    background: url('https://rb.gy/ao0qw') no-repeat center top;
+    background: url('https://rb.gy/o071k') no-repeat center top;
     background-size: cover;
     position: relative;
     z-index: 1;
 }
 
 .slider3 {
-    background: url('https://rb.gy/scrrl') no-repeat center top;
+    background: url('https://rb.gy/d4q1f') no-repeat center top;
     background-size: cover;
     position: relative;
     z-index: 1;
 }
 
 .slider4 {
-    background: url('https://rb.gy/q2o9c') no-repeat center top;
+    background: url('https://rb.gy/gvfha') no-repeat center top;
     background-size: cover;
     position: relative;
     z-index: 1;
